# MCP-Research-Work-PIAIC

./: Model Context Protocol Presentation.html  README.md
integrating-crewai-with-mcp/: pyproject.toml
integrating-crewai-with-mcp/src/mcpwhs/: crew.py  main.py
integrating-crewai-with-mcp/src/mcpwhs/tools/: mcp_tools.py
