[project]
name = "mcpwhs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wajahat Hussain", email = "wajahat.taurus2009@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "httpx>=0.27.2",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "litellm>=1.60.2",
    "mcp-run>=0.1.3",
    "mcp[cli]>=1.3.0",
    "mcpx>=0.1.1",
    "mcpx-py>=0.2.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp = "mcpwhs.main:run"
run_crew = "mcpwhs.main:run"
train = "mcpwhs.main:train"
replay = "mcpwhs.main:replay"
test = "mcpwhs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/mcpwhs"]
